force-app/main/default/objects/order__c/fields/COVID19__c.field-meta.xml
<CustomField>
    <fullName>COVID19__c</fullName>
    <formula>CASE(TEXT(CVC__c),
&quot;Issued&quot;,&quot;CustActionRequired&quot;,
&quot;BER Send Offer (Refund)&quot;,&quot;CustActionRequired&quot;,
&quot;BER Send Offer (Refund &amp; Coupon)&quot;,&quot;CustActionRequired&quot;,
&quot;BER Send Offer (FollowUp)&quot;,&quot;CustActionRequired&quot;,
&quot;BER Bank Details Required (Refund)&quot;,&quot;CustActionRequired&quot;,
&quot;BER Bank Details Required (Refund &amp; Coupon)&quot;,&quot;CustActionRequired&quot;,
&quot;BER Multi (Refund)&quot;,&quot;CustActionRequired&quot;,
&quot;BER Multi (Refund &amp; Coupon)&quot;,&quot;CustActionRequired&quot;,
&quot;MayJuneCOVID - Date Change&quot;,&quot;CustActionRequired&quot;,

&quot;NYCE&quot;,&quot;Processed&quot;,
&quot;TADCredit&quot;,&quot;Processed&quot;,
&quot;Return Home&quot;,&quot;Processed&quot;,
&quot;Proceed&quot;,&quot;Processed&quot;,
&quot;POM&quot;,&quot;Processed&quot;,
&quot;Open Credit&quot;,&quot;Processed&quot;,
&quot;Open Credit(Revised)&quot;,&quot;Processed&quot;,
&quot;DateChange&quot;,&quot;Processed&quot;,
&quot;Declined&quot;,&quot;Processed&quot;,
&quot;Cancel &amp; Credit&quot;,&quot;Processed&quot;,
&quot;Cancelled&quot;,&quot;Processed&quot;,
&quot;Forced Credit&quot;,&quot;Processed&quot;,
&quot;1939PaymentReceivedReissue&quot;,&quot;Processed&quot;,
&quot;DateChange&quot;,&quot;Processed&quot;,
&quot;TADDefer&quot;,&quot;Processed&quot;,
&quot;3237ExclCredit&quot;,&quot;Processed&quot;,
&quot;CancelManualCredit&quot;,&quot;Processed&quot;,
&quot;TADCredit&quot;,&quot;Processed&quot;,
&quot;TADRevisedOffer&quot;,&quot;Processed&quot;,
&quot;PartCredit PartRefund&quot;,&quot;Processed&quot;,

&quot;3111Opt1&quot;,&quot;Goodwill&quot;,
&quot;3111Opt2&quot;,&quot;Goodwill&quot;,
&quot;Goodwill&quot;,&quot;Goodwill&quot;,
&quot;Unaffected&quot;,&quot;BAU&quot;,

&quot;Voucher&quot;,&quot;TADActionRequired&quot;,
&quot;TADActionRequired&quot;,&quot;TADActionRequired&quot;,
&quot;MayJuneCOVID&quot;,&quot;TADActionRequired&quot;,
&quot;BER - Hardship&quot;,&quot;TADActionRequired&quot;,

&quot;TADRefund&quot;,&quot;BERefund&quot;,
&quot;BERefund&quot;,&quot;BERefund&quot;,
&quot;BERefund - Partial&quot;,&quot;BERefund&quot;,
&quot;BER Accepted (Refund)&quot;,&quot;BERefund&quot;,
&quot;BER Accepted (Refund &amp; Coupon)&quot;,&quot;BERefund&quot;,
&quot;BER Refund - Unsuccessful&quot;,&quot;BERefund&quot;,
&quot;BER Accepted - Bank Refund Required&quot;,&quot;BERefund&quot;,

&quot;RefundProcessed&quot;,&quot;RefundProcessed&quot;,
&quot;BER Refunded (Refund)&quot;,&quot;RefundProcessed&quot;,
&quot;BER Refunded (Refund &amp; Coupon)&quot;,&quot;RefundProcessed&quot;,

&quot;Chargeback&quot;,&quot;Chargeback&quot;,


 IF( AND(ISBLANK(TEXT(CVC__c)),TEXT(order_status__c) &lt;&gt; &quot;Expired&quot;,TEXT(order_status__c) &lt;&gt; &quot;Cancelled&quot;) , 



&quot;BAU&quot;, &quot;-&quot;) 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COVID19</label>
    <type>Text</type>
</CustomField>