force-app/main/default/objects/order__c/fields/COVID_Comms__c.field-meta.xml
<CustomField>
    <fullName>COVID_Comms__c</fullName>
    <label>COVID Comms</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>