force-app/main/default/objects/order__c/fields/COVID_Prepayments_Count__c.field-meta.xml
<CustomField>
    <fullName>COVID_Prepayments_Count__c</fullName>
    <label>COVID Prepayments Count</label>
    <summarizedField>COVID_Prepayments__c.Approx_Payment__c</summarizedField>
    <summaryForeignKey>COVID_Prepayments__c.orders__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>