force-app/main/default/objects/order__c/fields/COVIDFormURL__c.field-meta.xml
<CustomField>
    <fullName>COVIDFormURL__c</fullName>
    <formula>&quot;https://www.tripadeal.com.au/dform/&quot;&amp; COVIDFormID__c &amp;&quot;?id=&quot;&amp; FAID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COVIDFormURL</label>
    <type>Text</type>
</CustomField>