force-app/main/default/objects/order__c/fields/created_date__c.field-meta.xml
<CustomField>
    <fullName>created_date__c</fullName>
    <label>Created Date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>