force-app/main/default/objects/order__c/fields/Cruise__c.field-meta.xml
<CustomField>
    <fullName>Cruise__c</fullName>
    <formula>INCLUDES(deal__r.deal_type__c,&apos;Cruise&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cruise</label>
    <type>Checkbox</type>
</CustomField>