force-app/main/default/objects/order__c/fields/CS_Attribution_Count__c.field-meta.xml
<CustomField>
    <fullName>CS_Attribution_Count__c</fullName>
    <description>Count of attribution records</description>
    <label>CS Attribution Count</label>
    <summaryForeignKey>CS_Attribution__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>