force-app/main/default/objects/order__c/fields/CS_Attribution_Sum_Total__c.field-meta.xml
<CustomField>
    <fullName>CS_Attribution_Sum_Total__c</fullName>
    <label>CS Attribution Sum Total</label>
    <summarizedField>CS_Attribution__c.User_Attribution__c</summarizedField>
    <summaryForeignKey>CS_Attribution__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>