force-app/main/default/objects/order__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <description>This is the user facing field to identify what the next steps of the order are</description>
    <label>Current Status</label>
    <length>125</length>
    <type>Text</type>
</CustomField>