force-app/main/default/objects/order__c/fields/Customer_Called_Back__c.field-meta.xml
<CustomField>
    <fullName>Customer_Called_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Called Back?</label>
    <type>Checkbox</type>
</CustomField>