force-app/main/default/objects/order__c/fields/CVC__c.field-meta.xml
<CustomField>
    <fullName>CVC__c</fullName>
    <label>CVC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Unaffected</fullName>
            </value>
            <value>
                <fullName>TADActionRequired</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
                <label>Declined (Insurance)</label>
            </value>
            <value>
                <fullName>MayJuneCOVID</fullName>
            </value>
            <value>
                <fullName>MayJuneCOVID - Date Change</fullName>
            </value>
            <value>
                <fullName>DateChange</fullName>
            </value>
            <value>
                <fullName>Open Credit</fullName>
            </value>
            <value>
                <fullName>TADDefer</fullName>
            </value>
            <value>
                <fullName>PartCredit PartRefund</fullName>
            </value>
            <value>
                <fullName>3237ExclCredit</fullName>
                <label>ExclCredit/OpenCredit</label>
            </value>
            <value>
                <fullName>BER - Hardship</fullName>
            </value>
            <value>
                <fullName>BERefund</fullName>
            </value>
            <value>
                <fullName>BERefund - Partial</fullName>
            </value>
            <value>
                <fullName>BER Send Offer (Refund)</fullName>
            </value>
            <value>
                <fullName>BER Send Offer (Refund &amp; Coupon)</fullName>
            </value>
            <value>
                <fullName>BER Send Offer (FollowUp)</fullName>
            </value>
            <value>
                <fullName>BER Accepted (Refund)</fullName>
            </value>
            <value>
                <fullName>BER Accepted (Refund &amp; Coupon)</fullName>
            </value>
            <value>
                <fullName>BER Refunded (Refund)</fullName>
            </value>
            <value>
                <fullName>BER Refunded (Refund &amp; Coupon)</fullName>
            </value>
            <value>
                <fullName>RefundProcessed</fullName>
            </value>
            <value>
                <fullName>BER Subrogation</fullName>
            </value>
            <value>
                <fullName>BER Refund - Unsuccessful Payment</fullName>
            </value>
            <value>
                <fullName>BER Accepted - Bank Refund Required</fullName>
            </value>
            <value>
                <fullName>BER Bank Details Required (Refund)</fullName>
            </value>
            <value>
                <fullName>BER Bank Details Required (Refund &amp; Coupon)</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>NCAT</fullName>
            </value>
            <value>
                <fullName>CancelManualCredit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>