force-app/main/default/objects/order__c/fields/CVC_Coupon_Name__c.field-meta.xml
<CustomField>
    <fullName>CVC_Coupon_Name__c</fullName>
    <formula>MID( Id ,10,6) +  Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CVC Coupon Name</label>
    <type>Text</type>
</CustomField>