force-app/main/default/objects/order__c/fields/CVC_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>CVC_Credit_Amount__c</fullName>
    <formula>CASE( RecordType.Name ,
&quot;TC&quot;,(total_discounts__c + total_payment_received__c + TC_Total_Commission__c ),
total_discounts__c + total_payment_received__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CVC Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>