force-app/main/default/objects/order__c/fields/CVC_Excl_Coupon_Name__c.field-meta.xml
<CustomField>
    <fullName>CVC_Excl_Coupon_Name__c</fullName>
    <formula>MID( Id ,10,6) + 
IF(
CONTAINS(Account__r.LastName,&quot; &quot;), SUBSTITUTE(Account__r.LastName,&quot; &quot;,&quot;&quot;),Account__r.LastName) + &quot;-&quot; + 
LEFT(CVC_Exclusives_Supplier__c, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CVC Excl Coupon Name</label>
    <type>Text</type>
</CustomField>