force-app/main/default/objects/order__c/fields/CVC_Flight_Schedule_Change__c.field-meta.xml
<CustomField>
    <fullName>CVC_Flight_Schedule_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CVC Flight Schedule Change</label>
    <type>Checkbox</type>
</CustomField>