force-app/main/default/objects/order__c/fields/DataLoadRefresh__c.field-meta.xml
<CustomField>
    <fullName>DataLoadRefresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DataLoadRefresh</label>
    <type>Checkbox</type>
</CustomField>