force-app/main/default/objects/order__c/fields/Dates_Flights__c.field-meta.xml
<CustomField>
    <fullName>Dates_Flights__c</fullName>
    <formula>TEXT(deal__r.Dates_Flights__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dates Flights</label>
    <type>Text</type>
</CustomField>