force-app/main/default/objects/order__c/fields/Day_Hour__c.field-meta.xml
<CustomField>
    <fullName>Day_Hour__c</fullName>
    <formula>CASE( MOD(  DATEVALUE(time_confirmed__c)  - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)&amp;&quot;-&quot;&amp;
MID( TEXT( time_confirmed__c + 10/24 ), 12, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day+Hour</label>
    <type>Text</type>
</CustomField>