force-app/main/default/objects/order__c/fields/Day_Month_PC__c.field-meta.xml
<CustomField>
    <fullName>Day_Month_PC__c</fullName>
    <formula>LEFT(Dealandoptionremovedpc__c, (FIND(&quot;|&quot;, Dealandoptionremovedpc__c)-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day/Month PC</label>
    <type>Text</type>
</CustomField>