force-app/main/default/objects/order__c/fields/day_zero_departure__c.field-meta.xml
<CustomField>
    <fullName>day_zero_departure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day Zero Departure</label>
    <type>Checkbox</type>
</CustomField>