force-app/main/default/objects/order__c/fields/deal__c.field-meta.xml
<CustomField>
    <fullName>deal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Deal</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Deal__c.Status__c</field>
            <operation>equals</operation>
            <value>Published, Hero, Hidden</value>
        </filterItems>
        <filterItems>
            <field>Deal__c.Status_NZ__c</field>
            <operation>equals</operation>
            <value>Published, Hero, Hidden</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>order</relationshipLabel>
    <relationshipName>order</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>