force-app/main/default/objects/order__c/fields/Deal_and_Option__c.field-meta.xml
<CustomField>
    <fullName>Deal_and_Option__c</fullName>
    <formula>IF(
OR(TEXT(order_record_type_name__c) = &quot;TNZ&quot;,TEXT(order_record_type_name__c) = &quot;WT&quot;),
deal__r.title_nz__c,
deal__r.title__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Title</label>
    <type>Text</type>
</CustomField>