force-app/main/default/objects/order__c/fields/Deal_highlights__c.field-meta.xml
<CustomField>
    <fullName>Deal_highlights__c</fullName>
    <label>Deal highlights</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>