force-app/main/default/objects/order__c/fields/Deal_ID_Title__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID_Title__c</fullName>
    <formula>deal__r.Deal_ID_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal ID + Title</label>
    <type>Text</type>
</CustomField>