force-app/main/default/objects/order__c/fields/Deal_IDTC__c.field-meta.xml
<CustomField>
    <fullName>Deal_IDTC__c</fullName>
    <formula>deal__r.TAD_Deal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal ID</label>
    <type>Text</type>
</CustomField>