force-app/main/default/objects/order__c/fields/Deal_Option_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Deal_Option_Purchased__c</fullName>
    <formula>Deal_Purchased__c&amp;&apos;-&apos;&amp; Option_Purchased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal &amp; Option Purchased</label>
    <type>Text</type>
</CustomField>