force-app/main/default/objects/order__c/fields/Deal_Price__c.field-meta.xml
<CustomField>
    <fullName>Deal_Price__c</fullName>
    <formula>&quot;$&quot;&amp;TEXT(deal__r.price__c)&amp;&quot; &quot;&amp; deal__r.price_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Price</label>
    <type>Text</type>
</CustomField>