force-app/main/default/objects/order__c/fields/Deal_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Deal_Purchased__c</fullName>
    <formula>DealFC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Purchased</label>
    <type>Text</type>
</CustomField>