force-app/main/default/objects/order__c/fields/Deal_Sync_to_AP__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sync_to_AP__c</fullName>
    <formula>deal__r.Sync_to_AP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Sync to AP</label>
    <type>Checkbox</type>
</CustomField>