force-app/main/default/objects/order__c/fields/DEAL_TYPE__c.field-meta.xml
<CustomField>
    <fullName>DEAL_TYPE__c</fullName>
    <formula>IF(INCLUDES(deal__r.deal_type__c , &quot;stay&quot;), &quot;stay&quot;, &quot;travel&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEAL TYPE</label>
    <type>Text</type>
</CustomField>