force-app/main/default/objects/order__c/fields/DealFC__c.field-meta.xml
<CustomField>
    <fullName>DealFC__c</fullName>
    <formula>LEFT(description__c, (FIND(&quot;|&quot;, description__c)-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealFC</label>
    <type>Text</type>
</CustomField>