force-app/main/default/objects/order__c/fields/dealopdaymonthremoved__c.field-meta.xml
<CustomField>
    <fullName>dealopdaymonthremoved__c</fullName>
    <formula>RIGHT( Dealandoptionremovedpc__c , LEN(Dealandoptionremovedpc__c) - FIND(&quot;|&quot;, Dealandoptionremovedpc__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dealopdaymonthremoved</label>
    <type>Text</type>
</CustomField>