force-app/main/default/objects/order__c/fields/dealpdf_html__c.field-meta.xml
<CustomField>
    <fullName>dealpdf_html__c</fullName>
    <formula>&quot;&lt;a href=\&quot;&quot;&amp; dealpdf__c &amp; &quot;\&quot;&quot;  &amp; &quot;style=\&quot;-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;\&quot;&gt;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dealpdfhtml</label>
    <type>Text</type>
</CustomField>