force-app/main/default/objects/order__c/fields/dealpdf_html_nz__c.field-meta.xml
<CustomField>
    <fullName>dealpdf_html_nz__c</fullName>
    <formula>&quot;&lt;a href=\&quot;&quot;&amp; dealpdf_nz__c &amp; &quot;\&quot;&quot; &amp; &quot;style=\&quot;-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;\&quot;&gt;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dealpdfhtml - nz</label>
    <type>Text</type>
</CustomField>