force-app/main/default/objects/order__c/fields/dealpdf_nz__c.field-meta.xml
<CustomField>
    <fullName>dealpdf_nz__c</fullName>
    <formula>deal__r.pdf_nz__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dealpdf - nz</label>
    <type>Text</type>
</CustomField>