force-app/main/default/objects/order__c/fields/dealpdf_plain__c.field-meta.xml
<CustomField>
    <fullName>dealpdf_plain__c</fullName>
    <formula>deal__r.pdf__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal PDF plain</label>
    <type>Text</type>
</CustomField>