force-app/main/default/objects/order__c/fields/Dealremoved_PC__c.field-meta.xml
<CustomField>
    <fullName>Dealremoved_PC__c</fullName>
    <formula>RIGHT( description__c , LEN(description__c) - FIND(&quot;|&quot;, description__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealremoved(PC)</label>
    <type>Text</type>
</CustomField>