force-app/main/default/objects/order__c/fields/DEALSFID__c.field-meta.xml
<CustomField>
    <fullName>DEALSFID__c</fullName>
    <formula>deal__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEALSFID</label>
    <type>Text</type>
</CustomField>