force-app/main/default/objects/order__c/fields/Dep_City__c.field-meta.xml
<CustomField>
    <fullName>Dep_City__c</fullName>
    <formula>City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dep City</label>
    <type>Text</type>
</CustomField>