force-app/main/default/objects/order__c/fields/departure_cities__c.field-meta.xml
<CustomField>
    <fullName>departure_cities__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>departure cities</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>departure_cities__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.deal__c</valueField>
        </filterItems>
        <filterItems>
            <field>departure_cities__c.order_filter__c</field>
            <operation>contains</operation>
            <valueField>$Source.order_record_type_name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>departure_cities__c</referenceTo>
    <relationshipLabel>order</relationshipLabel>
    <relationshipName>order</relationshipName>
    <type>Lookup</type>
</CustomField>