force-app/main/default/objects/order__c/fields/Departure_City_Qty_Commission__c.field-meta.xml
<CustomField>
    <fullName>Departure_City_Qty_Commission__c</fullName>
    <formula>Departure_City_Commission__c * qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure City Qty Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>