force-app/main/default/objects/order__c/fields/Departure_City_Qty_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Departure_City_Qty_Net_Price__c</fullName>
    <formula>departure_city_qty_price__c - Departure_City_Qty_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure City Qty Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>