force-app/main/default/objects/order__c/fields/departure_city_qty_price__c.field-meta.xml
<CustomField>
    <fullName>departure_city_qty_price__c</fullName>
    <formula>departure_city_line_price__c * qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure City Qty Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>