force-app/main/default/objects/order__c/fields/Departure_City_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Departure_City_Surcharge__c</fullName>
    <formula>departure_cities__r.Surcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure City Surcharge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>