force-app/main/default/objects/order__c/fields/departure_city_Surcharge_Nett__c.field-meta.xml
<CustomField>
    <fullName>departure_city_Surcharge_Nett__c</fullName>
    <description>departure_city_line_price__c - Departure_City_Commission__c</description>
    <formula>departure_city_line_price__c  -  Departure_City_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>departure city Surcharge Nett</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>