force-app/main/default/objects/order__c/fields/Departure_DateTC__c.field-meta.xml
<CustomField>
    <fullName>Departure_DateTC__c</fullName>
    <formula>departures_dates__r.date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>