force-app/main/default/objects/order__c/fields/Departure_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Departure_Month_Year__c</fullName>
    <formula>LEFT(departures_dates__r.Name,7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Month/Year</label>
    <type>Text</type>
</CustomField>