force-app/main/default/objects/order__c/fields/departures_dates__c.field-meta.xml
<CustomField>
    <fullName>departures_dates__c</fullName>
    <label>Departure Date</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2 OR 3) AND (4 OR 5) AND ((6 AND 7) OR (8 AND 9)) AND 10</booleanFilter>
        <errorMessage>departure date - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>departures_dates__c.sub_options__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sub_Options__c</valueField>
        </filterItems>
        <filterItems>
            <field>departures_dates__c.options__c</field>
            <operation>equals</operation>
            <valueField>$Source.Options__c</valueField>
        </filterItems>
        <filterItems>
            <field>departures_dates__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.deal__c</valueField>
        </filterItems>
        <filterItems>
            <field>departures_dates__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>departures_dates__c.recently_expired__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>departures_dates__c.NRMA_Date__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Referrer__c</field>
            <operation>notEqual</operation>
            <value>NRMA</value>
        </filterItems>
        <filterItems>
            <field>$Source.Referrer__c</field>
            <operation>equals</operation>
            <value>NRMA</value>
        </filterItems>
        <filterItems>
            <field>departures_dates__c.NRMA_Date__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>departures_dates__c.order_filter__c</field>
            <operation>contains</operation>
            <valueField>$Source.order_record_type_name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>order</relationshipLabel>
    <relationshipName>order</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>