force-app/main/default/objects/order__c/fields/email_purchaser__c.field-meta.xml
<CustomField>
    <fullName>email_purchaser__c</fullName>
    <label>Email(Purchaser)</label>
    <type>Email</type>
</CustomField>