force-app/main/default/objects/order__c/fields/Emergency_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Email_Address__c</fullName>
    <label>Emergency Email Address</label>
    <type>Email</type>
</CustomField>