force-app/main/default/objects/order__c/fields/empty_text_field__c.field-meta.xml
<CustomField>
    <fullName>empty_text_field__c</fullName>
    <label>empty text field</label>
    <length>1</length>
    <type>Text</type>
</CustomField>