force-app/main/default/objects/order__c/fields/Estimated_Margin_NZ__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Margin_NZ__c</fullName>
    <formula>total_price__c * deal__r.Estimated_Margin_NZ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Margin - NZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>