force-app/main/default/objects/order__c/fields/eticket_url__c.field-meta.xml
<CustomField>
    <fullName>eticket_url__c</fullName>
    <label>ETicket Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>