force-app/main/default/objects/order__c/fields/exclude_sending_tp__c.field-meta.xml
<CustomField>
    <fullName>exclude_sending_tp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Sending TP</label>
    <type>Checkbox</type>
</CustomField>