force-app/main/default/objects/order__c/fields/exclusive__c.field-meta.xml
<CustomField>
    <fullName>exclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusive</label>
    <type>Checkbox</type>
</CustomField>