force-app/main/default/objects/order__c/fields/Exclusive_del__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_del__c</fullName>
    <formula>deal__r.Exclusive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TC Exclusive</label>
    <type>Checkbox</type>
</CustomField>